# Bees

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
data/: bee_climate_data.csv  bee_geographic_data.csv
data/processed/: bee_climate_processed.csv
notebooks/: bee_migration_tutorial.ipynb
results/: analysis_summary_report.txt  bee_migration_comprehensive_report.txt  correlation_analysis_correlation_matrix.csv  feature_importance.csv  integrated_migration_report.txt  ml_predictions_report.txt  model_metrics.csv  region_encoder.pkl  scientific_papers_synthesis.md
results/models/: gradient_boosting_model.pkl  linear_regression_model.pkl  random_forest_model.pkl  scaler.pkl  svr_model.pkl
src/: bee_analysis.py  bee_migration_analysis.py  bee_migration_predictor.py  comparative_analysis.py  config.py  generate_charts.py  generate_charts_english.py
