[metadata]
name = bee-migration-analysis
version = 1.0.0
author = Diego Gomes
author_email = diego@example.com
description = Climate Impact Assessment on Bee Migration Patterns
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/diegogo/bee-migration-analysis
project_urls =
    Bug Reports = https://github.com/diegogo/bee-migration-analysis/issues
    Source = https://github.com/diegogo/bee-migration-analysis
    Documentation = https://github.com/diegogo/bee-migration-analysis/blob/main/README.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Atmospheric Science
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Environment :: Console
    Natural Language :: English
keywords = bees, migration, climate, analysis, machine-learning, geospatial
license = MIT
license_files = LICENSE

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
include_package_data = True
zip_safe = False
install_requires =
    pandas>=1.3.0
    numpy>=1.21.0
    matplotlib>=3.4.0
    seaborn>=0.11.0
    scikit-learn>=1.0.0
    geopandas>=0.10.0
    folium>=0.12.0
    plotly>=5.0.0
    requests>=2.25.0
    scipy>=1.7.0
    joblib>=1.0.0
    openpyxl>=3.0.0
    xlsxwriter>=3.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.8.0
    pytest-xdist>=3.0.0
    pytest-timeout>=2.1.0
    coverage>=6.0.0
    black>=22.0.0
    flake8>=5.0.0
    mypy>=0.991
    isort>=5.10.0
    bandit>=1.7.0
    safety>=2.0.0
    pre-commit>=2.20.0
    pydocstyle>=6.1.0
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.8.0
    coverage>=6.0.0
docs =
    sphinx>=4.0.0
    sphinx-rtd-theme>=1.0.0
    myst-parser>=0.18.0
    sphinx-autodoc-typehints>=1.19.0
viz =
    plotly>=5.0.0
    dash>=2.0.0
    streamlit>=1.0.0
    bokeh>=2.4.0
api =
    fastapi>=0.70.0
    uvicorn>=0.15.0
    pydantic>=1.8.0
    python-multipart>=0.0.5
notebooks =
    jupyter>=1.0.0
    ipykernel>=6.0.0
    nbconvert>=6.0.0
    nbformat>=5.0.0
performance =
    dask>=2021.0.0
    numba>=0.56.0
    memory-profiler>=0.60.0
    line-profiler>=3.5.0

[options.entry_points]
console_scripts =
    bee-analysis = bee_migration.cli:main
    generate-charts = bee_migration.charts:main
    run-analysis = bee_migration.analysis:main

[options.package_data]
bee_migration = data/*.csv, data/*.json, templates/*.html, static/*

# Flake8 configuration
[flake8]
max-line-length = 88
max-complexity = 10
select = E,W,F,C
ignore =
    # Line too long (handled by black)
    E501,
    # Line break before binary operator (conflicts with black)
    W503,
    # Line break after binary operator (conflicts with black)
    W504,
    # Whitespace before ':' (conflicts with black)
    E203,
    # Multiple imports on one line
    E401,
    # Module level import not at top of file
    E402,
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    .mypy_cache,
    .tox,
    .venv,
    venv,
    env,
    build,
    dist,
    migrations,
    docs,
    notebooks,
    examples,
    scripts,
    data,
    images,
    results,
    htmlcov,
    .coverage,
    *.egg-info
per-file-ignores =
    # Tests can use assert statements
    tests/*:S101
    # __init__.py files can have unused imports
    __init__.py:F401
    # Setup files can have imports not at top
    setup.py:E402
    # Configuration files
    conftest.py:E402
count = True
statistics = True
show-source = True
benchmark = True

# pydocstyle configuration
[pydocstyle]
inherit = false
ignore = D100,D101,D102,D103,D104,D105,D106,D107,D200,D203,D212,D213,D400,D401,D402,D415
match = .*\.py
match-dir = (?!tests|migrations|docs|build|dist|htmlcov|\.)[^\.].*
convention = google
add-ignore = D100,D101,D102,D103,D104,D105,D106,D107

# mypy configuration (additional to pyproject.toml)
[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
check_untyped_defs = True
disallow_untyped_decorators = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True
show_error_codes = True
ignore_missing_imports = True

[mypy-geopandas.*]
ignore_missing_imports = True

[mypy-folium.*]
ignore_missing_imports = True

[mypy-plotly.*]
ignore_missing_imports = True

[mypy-seaborn.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-cartopy.*]
ignore_missing_imports = True

[mypy-shapely.*]
ignore_missing_imports = True

[mypy-fiona.*]
ignore_missing_imports = True

[mypy-pyproj.*]
ignore_missing_imports = True